--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       body {
         margin: 0;
         font-family: 'Poppins', sans-serif;
-        background: #1a1a1a;
+        background: #020208;
         color: #fff;
         overflow-x: hidden;
       }
       .font-game {
-        font-family: 'Luckiest+Guy', cursive;
+        font-family: 'Luckiest Guy', cursive;
       }
       @keyframes card-draw {
         from { transform: translateY(100%) rotate(10deg); opacity: 0; }
@@ -29,11 +29,46 @@
         60% { transform: translateY(10%); opacity: 1; }
         100% { transform: translateY(0); }
       }
+      @keyframes smooth-pop {
+        0%, 100% { transform: translateY(0) scale(1); }
+        50% { transform: translateY(-12px) scale(1.08); }
+      }
+      @keyframes tactical-glow {
+        0%, 100% { box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); }
+        50% { box-shadow: 0 0 35px rgba(255, 255, 255, 0.6), 0 0 10px rgba(234, 179, 8, 0.4); }
+      }
+      @keyframes card-blast-left {
+        0% { transform: translate(0, 0) scale(0.5) rotate(0); opacity: 0; }
+        100% { transform: translate(-100px, -20px) scale(1) rotate(-15deg); opacity: 1; }
+      }
+      @keyframes card-blast-right {
+        0% { transform: translate(0, 0) scale(0.5) rotate(0); opacity: 0; }
+        100% { transform: translate(100px, -20px) scale(1) rotate(15deg); opacity: 1; }
+      }
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
       .animate-card-draw {
         animation: card-draw 0.3s ease-out forwards;
       }
       .animate-bounce-in {
         animation: bounce-in 0.5s ease-out forwards;
+      }
+      .animate-smooth-pop {
+        animation: smooth-pop 2s ease-in-out infinite;
+      }
+      .animate-tactical-glow {
+        animation: tactical-glow 2s ease-in-out infinite;
+      }
+      .animate-blast-left {
+        animation: card-blast-left 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+      }
+      .animate-blast-right {
+        animation: card-blast-right 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+      }
+      .animate-fade-in {
+        animation: fade-in 0.3s ease-out forwards;
       }
       .scrollbar-hide::-webkit-scrollbar {
         display: none;
@@ -56,5 +91,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
